--- a/index.html
+++ b/index.html
@@ -5,21 +5,100 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" integrity="sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5/ijby8pCsnbu5S81n" crossorigin="anonymous"/>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./media/images/favicon.ico" type="image/x-icon">
 
-    <!-- css links -->
+
     <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="./styles/background.css">
     <title>Mike Devy</title>
 </head>
 <body>
-    <section class="header" id="home">
-        <div class="container">
-            <h1>salom</h1>
-            <h5>salom</h5>
-            <h3>salom</h3>
-            <p>sha384-xeJqLiuOvjUBq3iGOjvSQSIlwrpqjSHXpduPd6rQpuiM3f5</p>
+    <section class="home" id="home">
+        <div class="home_container">
+            <div class="stars">
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+                <div class="star"></div>
+            </div>
+            <div class="home_paragraph">
+                <p>Hello, I'm <span class="fullName">Mike Devy</span></p>
+                <p>I'm a Node.js Backend Developer</p>
+                <div class="btn-more">
+                    <a class="effect1" href="#">
+                      Start!
+                      <span class="bg"></span>
+                    </a>
+                </div>
+            </div>
+            <!-- <div class="home_arrows">
+                <p>More about me</p>
+                <svg id="more-arrows">
+                    <polygon style="fill:aqua" class="arrow-top" points="37.6,27.9 1.8,1.3 3.3,0 37.6,25.3 71.9,0 73.7,1.3 "/>
+                    <polygon style="fill:aqua" class="arrow-middle" points="37.6,45.8 0.8,18.7 4.4,16.4 37.6,41.2 71.2,16.4 74.5,18.7 "/>
+                    <polygon style="fill:aqua" class="arrow-bottom" points="37.6,64 0,36.1 5.1,32.8 37.6,56.8 70.4,32.8 75.5,36.1 "/>
+                </svg>
+            </div> -->
         </div>
     </section>
-</body>
+
+
+    <section class="about" id="about">
+        <nav class="navbar">
+            <div class="link_wrap">
+                <div class="page_link active">home</div>
+                <div class="page_link">about</div>
+                <div class="page_link">education</div>
+                <div class="page_link">portfolio</div>
+                <div class="page_link">contact</div>
+            </div>
+        </nav>
+    </section>
 </html>
