--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
 		<!-- HOME -->
 		<section class="home-section" id="home">
 			<div class="home_container">
-				<div class="bg"></div>
-				<div class="bg bg2"></div>
-				<div class="bg bg3"></div>
 				<div class="home_text">
 					Hello, I'm <span class="fullName">Mike Devy</span>. <br />
 					I'm a full-stack web developer
@@ -38,7 +35,7 @@
 		</section>
 
 		<!-- NAVBAR -->
-		<div id="navbar">
+		<div id="navbar" class="sticky">
 			<a class="home active" href="#home"
 				><i class="fa-solid fa-house fa-2xl"></i
 			></a>
