Finished Navbar and Fixed Home

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			src="https://kit.fontawesome.com/8fae0da513.js"
 			crossorigin="anonymous"
 		></script>
-		<link rel="icon" href="./media/images/favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="./images/m.jpg" type="image/x-icon" />
 
 		<link rel="stylesheet" href="./styles/global.css" />
 		<link rel="stylesheet" href="./styles/back.css" />
@@ -35,21 +35,13 @@
 		</section>
 
 		<!-- NAVBAR -->
-		<div id="navbar" class="sticky">
-			<a class="home active" href="#home"
-				><i class="fa-solid fa-house fa-2xl"></i
-			></a>
+		<nav id="navbar" class="sticky">
+			<a class="home active" href="#home"><i class="fa-solid fa-house fa-2xl"></i></a>
 			<a class="about" href="#about"><i class="fa-solid fa-user fa-2xl"></i></a>
-			<a class="education" href="#education"
-				><i class="fa-sharp fa-solid fa-graduation-cap fa-2xl"></i
-			></a>
-			<a class="projects" href="#projects"
-				><i class="fa-solid fa-cloud fa-2xl"></i
-			></a>
-			<a class="contact" href="#contact"
-				><i class="fa-solid fa-phone-volume fa-2xl"></i
-			></a>
-		</div>
+			<a class="education" href="#education"><i class="fa-sharp fa-solid fa-graduation-cap fa-2xl"></i></a>
+			<a class="projects" href="#projects"><i class="fa-solid fa-cloud fa-2xl"></i></a>
+			<a class="contact" href="#contact"><i class="fa-solid fa-phone-volume fa-2xl"></i></a>
+		</nav>
 
 		<!-- ABOUT -->
 		<section class="about-section" id="about">
