--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<img src="./images/my-photo.png" alt="my photo">
 				</div>
 				<div class="my-text">
-					<div>About me</div>
+					<!-- <div>About me</div> -->
 					<p>Hello! My name is Ulugbek. But you can call me <span>Mike</span>. I'm a Backend Node.js developer from Uzbekistan. Offering excellent	communication and good judgment. <br><br>Organised and dependable candidate successful at managing multiple priorities with a positive attitude. Ready to help the team achieve company goals. <br> <br>Here are a few technologies I’ve been working with recently:</p>
 					<ul class="my-skills">
 						<li>JavaScript (ES5+)</li>
