Fixed About Section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="./styles/home.css" />
 		<link rel="stylesheet" href="./styles/navbar.css" />
 		<link rel="stylesheet" href="./styles/about.css" />
+		<link rel="stylesheet" href="./styles/education.css" />
 		<title>Mike Devy</title>
 	</head>
 	<body>
@@ -52,65 +53,88 @@
 
 		<!-- ABOUT -->
 		<section class="about-section" id="about">
-			<div class="header">About <hr></div>
+			<div class="header">
+				About
+				<hr />
+			</div>
 			<div class="about-work">
 				<div class="about-container">
 					<i class="about-icon f fa-solid fa-gauge-simple-high"></i>
-					<p class="p-head">Fast</p>
-					<p class="p-text">
-						Lightweight and dynamic programming language and
-						framework
+					<p class="icon_title">Fast</p>
+					<p class="icon_text">
+						Lightweight and dynamic programming language
 					</p>
 				</div>
 				<div class="about-container">
 					<i class="about-icon s fa-sharp fa-solid fa-shield-halved"></i>
-					<p class="p-head">Security</p>
-					<p class="p-text">
+					<p class="icon_title">Security</p>
+					<p class="icon_text">
 						Data is stored in databases trusted by millions of people
 					</p>
 				</div>
 				<div class="about-container">
 					<i class="about-icon q fa-sharp fa-solid fa-certificate"></i>
-					<p class="p-head">Quality</p>
-					<p class="p-text">
-						I use the latest and modern technologies to build servers
+					<p class="icon_title">Quality</p>
+					<p class="icon_text">
+						Latest and modern technologies to build servers
 					</p>
 				</div>
 				<div class="about-container">
 					<i class="about-icon cc fa-solid fa-hand-sparkles"></i>
-					<p class="p-head">Clean code</p>
-					<p class="p-text">
-						The other people who may read and interpret my
-						code at a later time
+					<p class="icon_title">Clean code</p>
+					<p class="icon_text">
+						You may read and interpret my code at a later time
 					</p>
 				</div>
 			</div>
 
-			<div class="about-me">
-				<div class="my-img">
-					<img src="./images/my-photo.png" alt="my photo">
+			<div class="about_content">
+				<div class="about_content-main">
+					<h3 class="about__title">Get to know me!</h3>
+					<div class="about_text">
+						<p class="about_text-p">
+							Hello! My real name is Ulugbek, but you can call me
+							<strong>Mike</strong>. I'm a
+							<strong>Backend Node.js developer</strong> from Uzbekistan. I have
+							no commercial experience yet. But I have my own personal projects.
+							Check out some of my work in the
+							<strong>Projects</strong> section.
+						</p>
+						<p class="about_text-p">
+							Organised and dependable candidate successful at managing multiple
+							priorities with a positive attitude. Willingness to take on added
+							responsibilities to meet team goals. A hardworking and passionate
+							job seeker with organisational solid skills eager to secure
+						</p>
+						<p class="about_text-p">
+							I'm open to Job opportunities where I can contribute, learn and
+							grow. If you have a good opportunity that matches my skills and
+							experience then don't hesitate to contact me.
+						</p>
+					</div>
+					<button href="#contact" class="about__contact-btn" >contact</button>
 				</div>
-				<div class="my-text">
-					<!-- <div>About me</div> -->
-					<p>Hello! My name is Ulugbek. But you can call me <span>Mike</span>. I'm a Backend Node.js developer from Uzbekistan. Offering excellent	communication and good judgment. <br><br>Organised and dependable candidate successful at managing multiple priorities with a positive attitude. Ready to help the team achieve company goals. <br> <br>Here are a few technologies I’ve been working with recently:</p>
-					<ul class="my-skills">
-						<li>JavaScript (ES5+)</li>
-						<li>TypeScript (basic)</li>
-						<li>HTML & CSS</li>
-						<li>Node.js</li>
-						<li>PostgreSQL</li>
-						<li>MongoDB</li>
-						<li>ORM & ODM</li>
-						<li>SocketIO</li>
-					</ul>
+				<div class="about_content-skills">
+					<h3 class="about__title">Skills</h3>
+					<div class="skills">
+						<div class="skills__skill">JavaScript (ES5+)</div>
+						<div class="skills__skill">TypeScript (basic)</div>
+						<div class="skills__skill">HTML</div>
+						<div class="skills__skill">CSS</div>
+						<div class="skills__skill">Node.js</div>
+						<div class="skills__skill">Express</div>
+						<div class="skills__skill">PostgreSQL</div>
+						<div class="skills__skill">Sequelize</div>
+						<div class="skills__skill">MongoDB</div>
+						<div class="skills__skill">Mongoose</div>
+						<div class="skills__skill">SocketIO</div>
+					</div>
 				</div>
 			</div>
 		</section>
 
 		<!-- EDUCATION -->
-		<section class="education-section" id="section">
-			
-		</section>
+		<section class="education-section" id="section"></section>
 
 		<script src="./scripts/active-navbar.js"></script>
 	</body>
