Created Projects data

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 		<link rel="stylesheet" href="./styles/home.css" />
 		<link rel="stylesheet" href="./styles/navbar.css" />
 		<link rel="stylesheet" href="./styles/about.css" />
-		<link rel="stylesheet" href="./styles/education.css" />
+		<link rel="stylesheet" href="./styles/projects.css" />
 		<title>Mike Devy</title>
 	</head>
 	<body>
 		<!-- HOME -->
-		<section class="home-section" id="home">
+		<!-- <section class="home-section" id="home">
 			<div class="home_container">
 				<div class="home_text">
 					Hello, I'm <span class="fullName">Mike Devy</span>. <br />
@@ -32,7 +32,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 		<!-- NAVBAR -->
 		<nav id="navbar">
@@ -40,9 +40,9 @@
 				><i class="fa-solid fa-house fa-2xl"></i
 			></a>
 			<a class="about" href="#about"><i class="fa-solid fa-user fa-2xl"></i></a>
-			<a class="education" href="#education"
+			<!-- <a class="education" href="#education"
 				><i class="fa-sharp fa-solid fa-graduation-cap fa-2xl"></i
-			></a>
+			></a> -->
 			<a class="projects" href="#projects"
 				><i class="fa-solid fa-cloud fa-2xl"></i
 			></a>
@@ -52,7 +52,7 @@
 		</nav>
 
 		<!-- ABOUT -->
-		<section class="about-section" id="about">
+		<!-- <section class="about-section" id="about">
 			<div class="header">
 				About
 				<hr />
@@ -127,14 +127,24 @@
 						<div class="skills__skill">Sequelize</div>
 						<div class="skills__skill">MongoDB</div>
 						<div class="skills__skill">Mongoose</div>
-						<div class="skills__skill">SocketIO</div>
+						<div class="skills__skill">Socket.IO</div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 		<!-- EDUCATION -->
-		<section class="education-section" id="section"></section>
+		<!-- <section class="education-section" id="education"></section> -->
+
+		<!-- CONTACT -->
+		<section class="projects-section" id="projects">
+			<div class="header">projects <hr></div>
+
+			<div class="projects_container">
+
+				
+			</div>
+		</section>
 
 		<script src="./scripts/active-navbar.js"></script>
 	</body>
