Finished Projects Section

--- a/index.html
+++ b/index.html
@@ -19,20 +19,15 @@
 	</head>
 	<body>
 		<!-- HOME -->
-		<!-- <section class="home-section" id="home">
+		<section class="home-section" id="home">
 			<div class="home_container">
 				<div class="home_text">
 					Hello, I'm <span class="fullName">Mike Devy</span>. <br />
-					I'm a Backend developer
-					<div class="btn-more">
-						<a class="effect1" href="#about">
-							More
-							<span class="bg-btn"></span>
-						</a>
-					</div>
+					I'm a Backend developer <br>
+					<a href="#about" class="btn-more">More about me</a>
 				</div>
 			</div>
-		</section> -->
+		</section>
 
 		<!-- NAVBAR -->
 		<nav id="navbar">
@@ -52,7 +47,7 @@
 		</nav>
 
 		<!-- ABOUT -->
-		<!-- <section class="about-section" id="about">
+		<section class="about-section" id="about">
 			<div class="header">
 				About
 				<hr />
@@ -131,21 +126,22 @@
 					</div>
 				</div>
 			</div>
-		</section> -->
+		</section>
 
 		<!-- EDUCATION -->
 		<!-- <section class="education-section" id="education"></section> -->
 
 		<!-- CONTACT -->
 		<section class="projects-section" id="projects">
-			<div class="header">projects <hr></div>
-
-			<div class="projects_container">
-
-				
+			<div class="header">
+				projects
+				<hr />
 			</div>
+
+			<div class="projects_container"></div>
 		</section>
 
 		<script src="./scripts/active-navbar.js"></script>
+		<script src="./scripts/projects.js"></script>
 	</body>
 </html>
