--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 		<link rel="stylesheet" href="./styles/navbar.css" />
 		<link rel="stylesheet" href="./styles/about.css" />
 		<link rel="stylesheet" href="./styles/projects.css" />
+		<link rel="stylesheet" href="./styles/contact.css" />
+		<link rel="stylesheet" href="./styles/footer.css" />
 		<title>Mike Devy</title>
 	</head>
 	<body>
 		<!-- HOME -->
-		<section class="home-section" id="home">
+		<!-- <section class="home-section" id="home">
 			<div class="home_container">
 				<div class="home_text">
 					Hello, I'm <span class="fullName">Mike Devy</span>. <br />
@@ -27,29 +29,27 @@
 					<a href="#about" class="btn-more">More about me</a>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 		<!-- NAVBAR -->
-		<nav id="navbar">
+		<!-- <nav id="navbar">
 			<a class="home active" href="#home"
 				><i class="fa-solid fa-house fa-2xl"></i
 			></a>
 			<a class="about" href="#about"><i class="fa-solid fa-user fa-2xl"></i></a>
-			<!-- <a class="education" href="#education"
-				><i class="fa-sharp fa-solid fa-graduation-cap fa-2xl"></i
-			></a> -->
+
 			<a class="projects" href="#projects"
 				><i class="fa-solid fa-cloud fa-2xl"></i
 			></a>
 			<a class="contact" href="#contact"
 				><i class="fa-solid fa-phone-volume fa-2xl"></i
 			></a>
-		</nav>
+		</nav> -->
 
 		<!-- ABOUT -->
-		<section class="about-section" id="about">
+		<!-- <section class="about-section" id="about">
 			<div class="header">
-				About
+				About me
 				<hr />
 			</div>
 			<div class="about-work">
@@ -107,7 +107,7 @@
 							experience then don't hesitate to contact me.
 						</p>
 					</div>
-					<button href="#contact" class="about__contact-btn" >contact</button>
+					<button href="#contact" class="about__contact-btn btn" >contact</button>
 				</div>
 				<div class="about_content-skills">
 					<h3 class="about__title">Skills</h3>
@@ -126,22 +126,66 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
-		<!-- EDUCATION -->
-		<!-- <section class="education-section" id="education"></section> -->
-
-		<!-- CONTACT -->
-		<section class="projects-section" id="projects">
+		<!-- PROJECTS -->
+		<!-- <section class="projects-section" id="projects">
 			<div class="header">
 				projects
 				<hr />
 			</div>
-
 			<div class="projects_container"></div>
+		</section> -->
+		
+		<!-- CONTACT -->
+		<section class="contact-section" id="contact">
+			<div class="header">contact <hr></div>
+
+			<div class="contact__form-container">
+				<form action="#" class="contact__form" method="post">
+					<input type="hidden" name="form-name" value="form 1">
+					<div class="contact__form-field">
+						<label class="contact__form-label" for="name">Name</label>
+						<input required placeholder="Enter your name" type="text" class="contact__form-input" name="name" id="name">
+					</div>
+					<div class="contact__form-field">
+						<label class="contact__form-label" for="email">Email</label>
+						<input required placeholder="Enter your email" type="email" class="contact__form-input" name="email" id="email">
+					</div>
+					<div class="contact__form-field">
+						<label class="contact__form-label" for="message">Message</label>
+						<textarea required class="contact__form-input" name="message" id="message" cols="30" rows="10" placeholder="Enter your message"></textarea>
+					</div>
+					<button type="submit" class="contact__btn btn">Submit</button>
+				</form>
+			</div>
 		</section>
 
-		<script src="./scripts/active-navbar.js"></script>
-		<script src="./scripts/projects.js"></script>
+		<footer class="footer">
+			<div class="footer__container">
+				<div class="footer__container-row1">
+					<h2 class="footer__container-head">Mike Devy</h2>
+					<p class="footer__container-text">A Backend focused Web Developer building the Backend of Websites and Web Applications </p>
+				</div>
+				
+				<div class="footer__container-row2">
+					<h2 class="footer__container-head">Social</h2>
+					<div class="socials">
+						<a href="https://www.linkedin.com/in/nodejs-developer/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+						<a href="https://github.com/ulubekdev" target="_blank"><i class="fa-brands fa-github"></i></a>
+						<a href="https://gitlab.com/theulubek" target="_blank"><i class="fa-brands fa-gitlab"></i></a>
+						<a href="https://instagram.com/ulubekdev" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+						<a href="https://t.me/ulubek_dev" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+					</div>
+				</div>
+			</div>
+			<hr class="footer-hr">
+
+			<div class="copyright">
+				© Copyright 2022. Made by <a href="/"><strong>Mike Devy</strong></a>
+			</div>
+		</footer>
+		<!-- <script src="./scripts/active-navbar.js"></script> -->
+		<!-- <script src="./scripts/projects.js"></script> -->
 	</body>
 </html>
