Fixed known bugs

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<!-- HOME -->
-		<!-- <section class="home-section" id="home">
+		<section class="home-section" id="home">
 			<div class="home_container">
 				<div class="home_text">
 					Hello, I'm <span class="fullName">Mike Devy</span>. <br />
@@ -29,10 +29,10 @@
 					<a href="#about" class="btn-more">More about me</a>
 				</div>
 			</div>
-		</section> -->
+		</section>
 
 		<!-- NAVBAR -->
-		<!-- <nav id="navbar">
+		<nav id="navbar">
 			<a class="home active" href="#home"
 				><i class="fa-solid fa-house fa-2xl"></i
 			></a>
@@ -44,10 +44,10 @@
 			<a class="contact" href="#contact"
 				><i class="fa-solid fa-phone-volume fa-2xl"></i
 			></a>
-		</nav> -->
+		</nav>
 
 		<!-- ABOUT -->
-		<!-- <section class="about-section" id="about">
+		<section class="about-section" id="about">
 			<div class="header">
 				About me
 				<hr />
@@ -126,16 +126,16 @@
 					</div>
 				</div>
 			</div>
-		</section> -->
+		</section>
 
 		<!-- PROJECTS -->
-		<!-- <section class="projects-section" id="projects">
+		<section class="projects-section" id="projects">
 			<div class="header">
 				projects
 				<hr />
 			</div>
 			<div class="projects_container"></div>
-		</section> -->
+		</section>
 		
 		<!-- CONTACT -->
 		<section class="contact-section" id="contact">
@@ -185,7 +185,7 @@
 				© Copyright 2022. Made by <a href="/"><strong>Mike Devy</strong></a>
 			</div>
 		</footer>
-		<!-- <script src="./scripts/active-navbar.js"></script> -->
-		<!-- <script src="./scripts/projects.js"></script> -->
+		<script src="./scripts/active-navbar.js"></script>
+		<script src="./scripts/projects.js"></script>
 	</body>
 </html>
