--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 							experience then don't hesitate to contact me.
 						</p>
 					</div>
-					<button href="./#contact" class="about__contact-btn btn" >contact</button>
+					<a href="./#contact" class="about__contact-btn btn" >contact</a>
 				</div>
 				<div class="about_content-skills">
 					<h3 class="about__title">Skills</h3>
