--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="home_container">
 				<div class="home_text">
 					Hello, I'm <span class="fullName">Mike Devy</span>. <br />
-					I'm a Backend developer <br>
+					I'm a Backend developer <br />
 					<a href="#about" class="btn-more">More about me</a>
 				</div>
 			</div>
@@ -56,9 +56,7 @@
 				<div class="about-container">
 					<i class="about-icon f fa-solid fa-gauge-simple-high"></i>
 					<p class="icon_title">Fast</p>
-					<p class="icon_text">
-						Lightweight and dynamic programming language
-					</p>
+					<p class="icon_text">Lightweight and dynamic programming language</p>
 				</div>
 				<div class="about-container">
 					<i class="about-icon s fa-sharp fa-solid fa-shield-halved"></i>
@@ -90,24 +88,24 @@
 						<p class="about_text-p">
 							Hello! My real name is Ulugbek, but you can call me
 							<strong>Mike</strong>. I'm a
-							<strong>Backend Node.js developer</strong> from Uzbekistan. I have
-							no commercial experience yet. But I have my own personal projects.
-							Check out some of my work in the
-							<strong>Projects</strong> section.
+							<strong>Backend Node.js developer :</strong>
 						</p>
-						<p class="about_text-p">
-							Organised and dependable candidate successful at managing multiple
-							priorities with a positive attitude. Willingness to take on added
-							responsibilities to meet team goals. A hardworking and passionate
-							job seeker with organisational solid skills eager to secure
-						</p>
+						<ul class="about_text-p">
+							<li>1 years Node.js experience and good knowledge on Node.js</li>
+							<li>Experience with building RESTful and GraphQL API with express server-Practical experience with Typescript</li>
+							<li>Ability to create complicated logic flow based on business requirements</li>
+							<li>Experience with MongoDB and PostgreSQL understanding of software design principles and patterns, and experience applying them</li>
+							<li>High productivity and effective time management-Experience with Scrum/Agile SDLC</li>
+							<li>Outstanding interpersonal and written communication skills</li>
+							<li>Good spoken English</li>
+						</ul>
 						<p class="about_text-p">
 							I'm open to Job opportunities where I can contribute, learn and
 							grow. If you have a good opportunity that matches my skills and
 							experience then don't hesitate to contact me.
 						</p>
 					</div>
-					<a href="./#contact" class="about__contact-btn btn" >contact</a>
+					<a href="./#contact" class="about__contact-btn btn">contact</a>
 				</div>
 				<div class="about_content-skills">
 					<h3 class="about__title">Skills</h3>
@@ -136,27 +134,59 @@
 			</div>
 			<div class="projects_container"></div>
 		</section>
-		
+
 		<!-- CONTACT -->
 		<section class="contact-section" id="contact">
-			<div class="header">contact <hr></div>
+			<div class="header">
+				contact
+				<hr />
+			</div>
 
 			<div class="contact__form-container">
 				<form action="#" class="contact__form" method="post">
-					<input type="hidden" name="form-name" value="form 1">
+					<input type="hidden" name="form-name" value="form 1" />
 					<div class="contact__form-field">
 						<label class="contact__form-label" for="name">Name</label>
-						<input required placeholder="Enter your name" type="text" class="contact__form-input" name="name" id="name">
+						<input
+							required
+							placeholder="Enter your name"
+							type="text"
+							class="contact__form-input"
+							name="name"
+							id="name"
+						/>
 					</div>
 					<div class="contact__form-field">
 						<label class="contact__form-label" for="email">Email</label>
-						<input required placeholder="Enter your email" type="email" class="contact__form-input" name="email" id="email">
+						<input
+							required
+							placeholder="Enter your email"
+							type="email"
+							class="contact__form-input"
+							name="email"
+							id="email"
+						/>
 					</div>
 					<div class="contact__form-field">
 						<label class="contact__form-label" for="message">Message</label>
-						<textarea style="resize: none" required class="contact__form-input" name="message" id="message" cols="30" rows="10" placeholder="Enter your message"></textarea>
+						<textarea
+							style="resize: none"
+							required
+							class="contact__form-input"
+							name="message"
+							id="message"
+							cols="30"
+							rows="10"
+							placeholder="Enter your message"
+						></textarea>
 					</div>
-					<button type="submit" class="contact__btn btn" onclick="sendMail(); return false">Submit</button>
+					<button
+						type="submit"
+						class="contact__btn btn"
+						onclick="sendMail(); return false"
+					>
+						Submit
+					</button>
 				</form>
 			</div>
 		</section>
@@ -165,21 +195,36 @@
 			<div class="footer__container">
 				<div class="footer__container-row1">
 					<h2 class="footer__container-head">Mike Devy</h2>
-					<p class="footer__container-text">A Backend focused Web Developer building the Backend of Websites and Web Applications </p>
+					<p class="footer__container-text">
+						A Backend focused Web Developer building the Backend of Websites and
+						Web Applications
+					</p>
 				</div>
-				
+
 				<div class="footer__container-row2">
 					<h2 class="footer__container-head">Social</h2>
 					<div class="socials">
-						<a href="https://www.linkedin.com/in/nodejs-developer/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-						<a href="https://github.com/ulubekdev" target="_blank"><i class="fa-brands fa-github"></i></a>
-						<a href="https://gitlab.com/theulubek" target="_blank"><i class="fa-brands fa-gitlab"></i></a>
-						<a href="https://instagram.com/ulubekdev" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-						<a href="https://t.me/ulubek_dev" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+						<a
+							href="https://www.linkedin.com/in/nodejs-developer/"
+							target="_blank"
+							><i class="fa-brands fa-linkedin-in"></i
+						></a>
+						<a href="https://github.com/ulubekdev" target="_blank"
+							><i class="fa-brands fa-github"></i
+						></a>
+						<a href="https://gitlab.com/theulubek" target="_blank"
+							><i class="fa-brands fa-gitlab"></i
+						></a>
+						<a href="https://instagram.com/ulubekdev" target="_blank"
+							><i class="fa-brands fa-instagram"></i
+						></a>
+						<a href="https://t.me/ulubek_dev" target="_blank"
+							><i class="fa-brands fa-telegram"></i
+						></a>
 					</div>
 				</div>
 			</div>
-			<hr class="footer-hr">
+			<hr class="footer-hr" />
 
 			<div class="copyright">
 				© Copyright 2022. Made by <a href="/"><strong>Mike Devy</strong></a>
