--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="home_container">
 				<div class="home_text">
 					Hello, I'm <span class="fullName">Mike Devy</span>. <br />
-					I'm a Backend developer <br />
+					I'm a Backend web developer <br />
 					<a href="#about" class="btn-more">More about me</a>
 				</div>
 			</div>
