--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script
-			src="https://kit.fontawesome.com/8fae0da513.js"
-			crossorigin="anonymous"
-		></script>
+		<script src="https://kit.fontawesome.com/8fae0da513.js" crossorigin="anonymous"></script>
+		<script src="https://unpkg.com/scrollreveal@4"></script>
 		<link rel="icon" href="./images/m.jpg" type="image/x-icon" />
 
 		<link rel="stylesheet" href="./styles/global.css" />
@@ -33,17 +31,10 @@
 
 		<!-- NAVBAR -->
 		<nav id="navbar">
-			<a class="home active" href="#home"
-				><i class="fa-solid fa-house fa-2xl"></i
-			></a>
+			<a class="home active" href="#home"><i class="fa-solid fa-house fa-2xl"></i></a>
 			<a class="about" href="#about"><i class="fa-solid fa-user fa-2xl"></i></a>
-
-			<a class="projects" href="#projects"
-				><i class="fa-solid fa-cloud fa-2xl"></i
-			></a>
-			<a class="contact" href="#contact"
-				><i class="fa-solid fa-phone-volume fa-2xl"></i
-			></a>
+			<a class="projects" href="#projects"><i class="fa-solid fa-cloud fa-2xl"></i></a>
+			<a class="contact" href="#contact"><i class="fa-solid fa-phone-volume fa-2xl"></i></a>
 		</nav>
 
 		<!-- ABOUT -->
@@ -230,6 +221,7 @@
 				© Copyright 2022. Made by <a href="/"><strong>Mike Devy</strong></a>
 			</div>
 		</footer>
+		<script src="./scripts/about-scroll.js"></script>
 		<script src="./scripts/active-navbar.js"></script>
 		<script src="./scripts/projects.js"></script>
 		<script src="./scripts/send-email.js"></script>
