--- a/index.html
+++ b/index.html
@@ -195,23 +195,11 @@
 				<div class="footer__container-row2">
 					<h2 class="footer__container-head">Social</h2>
 					<div class="socials">
-						<a
-							href="https://www.linkedin.com/in/nodejs-developer/"
-							target="_blank"
-							><i class="fa-brands fa-linkedin-in"></i
-						></a>
-						<a href="https://github.com/ulubekdev" target="_blank"
-							><i class="fa-brands fa-github"></i
-						></a>
-						<a href="https://gitlab.com/theulubek" target="_blank"
-							><i class="fa-brands fa-gitlab"></i
-						></a>
-						<a href="https://instagram.com/ulubekdev" target="_blank"
-							><i class="fa-brands fa-instagram"></i
-						></a>
-						<a href="https://t.me/ulubek_dev" target="_blank"
-							><i class="fa-brands fa-telegram"></i
-						></a>
+						<a class="socials__social" href="https://www.linkedin.com/in/nodejs-developer/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+						<a class="socials__social" href="https://github.com/ulubekdev" target="_blank"><i class="fa-brands fa-github"></i></a>
+						<a class="socials__social" href="https://gitlab.com/theulubek" target="_blank"><i class="fa-brands fa-gitlab"></i></a>
+						<a class="socials__social" href="https://instagram.com/ulubekdev" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+						<a class="socials__social" href="https://t.me/ulubek_dev" target="_blank"><i class="fa-brands fa-telegram"></i></a>
 					</div>
 				</div>
 			</div>
@@ -221,7 +209,7 @@
 				© Copyright 2022. Made by <a href="/"><strong>Mike Devy</strong></a>
 			</div>
 		</footer>
-		<script src="./scripts/about-scroll.js"></script>
+		<!-- <script src="./scripts/scroll-reveal.js"></script> -->
 		<script src="./scripts/active-navbar.js"></script>
 		<script src="./scripts/projects.js"></script>
 		<script src="./scripts/send-email.js"></script>
