Fixed Scroll Reveal

--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
 				About me
 				<hr />
 			</div>
-			<div class="about-work">
-				<div class="about-container">
+			<div class="about-container">
+				<div class="about-container_content">
 					<i class="about-icon f fa-solid fa-gauge-simple-high"></i>
 					<p class="icon_title">Fast</p>
 					<p class="icon_text">Lightweight and dynamic programming language</p>
 				</div>
-				<div class="about-container">
+				<div class="about-container_content">
 					<i class="about-icon s fa-sharp fa-solid fa-shield-halved"></i>
 					<p class="icon_title">Security</p>
 					<p class="icon_text">
 						Data is stored in databases trusted by millions of people
 					</p>
 				</div>
-				<div class="about-container">
+				<div class="about-container_content">
 					<i class="about-icon q fa-sharp fa-solid fa-certificate"></i>
 					<p class="icon_title">Quality</p>
 					<p class="icon_text">
 						Latest and modern technologies to build servers
 					</p>
 				</div>
-				<div class="about-container">
+				<div class="about-container_content">
 					<i class="about-icon cc fa-solid fa-hand-sparkles"></i>
 					<p class="icon_title">Clean code</p>
 					<p class="icon_text">
@@ -209,7 +209,7 @@
 				© Copyright 2022. Made by <a href="/"><strong>Mike Devy</strong></a>
 			</div>
 		</footer>
-		<!-- <script src="./scripts/scroll-reveal.js"></script> -->
+		<script src="./scripts/scroll-reveal.js"></script>
 		<script src="./scripts/active-navbar.js"></script>
 		<script src="./scripts/projects.js"></script>
 		<script src="./scripts/send-email.js"></script>
