Changed navbar settings

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
 		<!-- NAVBAR -->
 		<nav id="navbar">
-			<a class="home active" href="#home"><i class="fa-solid fa-house fa-2xl"></i></a>
-			<a class="about" href="#about"><i class="fa-solid fa-user fa-2xl"></i></a>
-			<a class="projects" href="#projects"><i class="fa-solid fa-cloud fa-2xl"></i></a>
-			<a class="contact" href="#contact"><i class="fa-solid fa-phone-volume fa-2xl"></i></a>
+			<a class="home active" href="#home">Home</a>
+			<a class="about" href="#about">About</a>
+			<a class="projects" href="#projects">Projects</a>
+			<a class="contact" href="#contact">Contact</a>
 		</nav>
 
 		<!-- ABOUT -->
@@ -210,8 +210,8 @@
 			</div>
 		</footer>
 		<script src="./scripts/scroll-reveal.js"></script>
-		<script src="./scripts/active-navbar.js"></script>
-		<script src="./scripts/projects.js"></script>
+		<script src="./scripts/navbar.js"></script>
+		<!-- <script src="./scripts/projects.js"></script> -->
 		<script src="./scripts/send-email.js"></script>
 	</body>
 </html>
