--- a/index.html
+++ b/index.html
@@ -23,23 +23,26 @@
 			<div class="home_container">
 				<div class="home_text">
 					Hello, I'm <span class="fullName">Mike Devy</span>. <br />
-					I'm a Backend web developer <br />
+					I'm a backend web developer <br />
 					<a href="#about" class="btn-more">More about me</a>
 				</div>
 			</div>
 		</section>
 
 		<!-- NAVBAR -->
-		<nav id="navbar">
+		<nav class="topnav" id="myTopnav">
 			<a class="home active" href="#home">Home</a>
 			<a class="about" href="#about">About</a>
 			<a class="projects" href="#projects">Projects</a>
 			<a class="contact" href="#contact">Contact</a>
+			<a href="javascript:void(0);" class="icon" onclick="hamburger()">
+				<i class="fa fa-bars"></i>
+			</a>
 		</nav>
 
 		<!-- ABOUT -->
 		<section class="about-section" id="about">
-			<div class="header">
+			<div class="header about-head">
 				About me
 				<hr />
 			</div>
@@ -182,6 +185,7 @@
 			</div>
 		</section>
 
+		<!-- FOOTER -->
 		<footer class="footer">
 			<div class="footer__container">
 				<div class="footer__container-row1">
@@ -209,6 +213,8 @@
 				© Copyright 2022. Made by <a href="/"><strong>Mike Devy</strong></a>
 			</div>
 		</footer>
+
+		<script src="./scripts/mobile-navbar.js"></script>
 		<script src="./scripts/scroll-reveal.js"></script>
 		<script src="./scripts/navbar.js"></script>
 		<!-- <script src="./scripts/projects.js"></script> -->
