Fixed responsive about

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 						<div class="skills__skill">MongoDB</div>
 						<div class="skills__skill">Mongoose</div>
 						<div class="skills__skill">Socket.IO</div>
+						<div class="skills__skill">...</div>
 					</div>
 				</div>
 			</div>
