--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 		<script src="./scripts/mobile-navbar.js"></script>
 		<script src="./scripts/scroll-reveal.js"></script>
 		<script src="./scripts/navbar.js"></script>
-		<!-- <script src="./scripts/projects.js"></script> -->
+		<script src="./scripts/projects.js"></script>
 		<script src="./scripts/send-email.js"></script>
 	</body>
 </html>
