--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 				</div>
 
 				<div class="footer__container-row2">
-					<h2 class="footer__container-head">Social</h2>
+					<h2 class="footer__container-head scl">Social</h2>
 					<div class="socials">
 						<a class="socials__social" href="https://www.linkedin.com/in/nodejs-developer/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
 						<a class="socials__social" href="https://github.com/ulubekdev" target="_blank"><i class="fa-brands fa-github"></i></a>
