Corrected grammar mistakes

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
 							<strong>Backend Node.js developer :</strong>
 						</p>
 						<ul class="about_text-p">
-							<li>1 years Node.js experience and good knowledge on Node.js</li>
-							<li>Experience with building RESTful and GraphQL API with express server-Practical experience with Typescript</li>
-							<li>Ability to create complicated logic flow based on business requirements</li>
-							<li>Experience with MongoDB and PostgreSQL understanding of software design principles and patterns, and experience applying them</li>
-							<li>High productivity and effective time management-Experience with Scrum/Agile SDLC</li>
-							<li>Outstanding interpersonal and written communication skills</li>
+							<li>1 year JavaScript experience and in-depth knowledge of Node.js.</li>
+							<li>Experience in creating RESTful and GraphQL API with express server-Hands-on experience with Typescript.</li>
+							<li>Ability to create a complex logical flow according to business requirements.</li>
+							<li>MongoDB's and PostgreSQL's experience in understanding software design principles and models, and experience in their application.</li>
+							<li>High productivity and efficient time management - Experience in SDLC Scrum/Agile.</li>
+							<li>Excellent interpersonal & written communication skills.</li>
 							<li>Good spoken English</li>
 						</ul>
 						<p class="about_text-p">
