--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							experience then don't hesitate to contact me.
 						</p>
 					</div>
-					<a href="./#contact" class="about__contact-btn btn">contact</a>
+					<a href="./#contact" class="btn">contact</a>
 				</div>
 				<div class="about_content-skills">
 					<h3 class="about__title">Skills</h3>
@@ -177,7 +177,7 @@
 					</div>
 					<button
 						type="submit"
-						class="contact__btn btn"
+						class="btn"
 						onclick="sendMail(); return false"
 					>
 						Submit
