--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 							experience then don't hesitate to contact me.
 						</p>
 					</div>
-					<a href="./#contact" class="btn">contact</a>
+					<a href="./#contact" class="contact-btn btn">contact</a>
 				</div>
 				<div class="about_content-skills">
 					<h3 class="about__title">Skills</h3>
