Added some skills

--- a/index.html
+++ b/index.html
@@ -102,16 +102,22 @@
 					<h3 class="about__title">Skills</h3>
 					<div class="skills">
 						<div class="skills__skill">JavaScript (ES5+)</div>
-						<div class="skills__skill">TypeScript (basic)</div>
+						<div class="skills__skill">TypeScript (learning)</div>
 						<div class="skills__skill">HTML</div>
 						<div class="skills__skill">CSS</div>
 						<div class="skills__skill">Node.js</div>
-						<div class="skills__skill">Express</div>
+						<div class="skills__skill">ExpressJS</div>
+						<div class="skills__skill">NestJS (learning)</div>
+						<div class="skills__skill">Redis</div>
 						<div class="skills__skill">PostgreSQL</div>
 						<div class="skills__skill">Sequelize</div>
 						<div class="skills__skill">MongoDB</div>
 						<div class="skills__skill">Mongoose</div>
 						<div class="skills__skill">Socket.IO</div>
+						<div class="skills__skill">Jest</div>
+						<div class="skills__skill">Git/GitHub</div>
+						<div class="skills__skill">REST</div>
+						<div class="skills__skill">GraphQL</div>
 						<div class="skills__skill">...</div>
 					</div>
 				</div>
