--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 		<link rel="stylesheet" href="./styles/projects.css" />
 		<link rel="stylesheet" href="./styles/contact.css" />
 		<link rel="stylesheet" href="./styles/footer.css" />
-		<title>Mike Devy</title>
+		<title>Ulugbek Yolchimurodov</title>
 	</head>
 	<body>
 		<!-- HOME -->
 		<section class="home-section" id="home">
 			<div class="home_container">
 				<div class="home_text">
-					Hello, I'm <span class="fullName">Mike Devy</span>. <br />
+					Hello, I'm <span class="fullName">Ulugbek Yolchimurodov</span>. <br />
 					I'm a backend web developer <br />
 					<a href="#about" class="btn-more">More about me</a>
 				</div>
@@ -193,7 +193,7 @@
 		<footer class="footer">
 			<div class="footer__container">
 				<div class="footer__container-row1">
-					<h2 class="footer__container-head">Mike Devy</h2>
+					<h2 class="footer__container-head">Ulugbek Yolchimurodov</h2>
 					<p class="footer__container-text">
 						A Backend focused Web Developer building the Backend of Websites and
 						Web Applications
@@ -214,7 +214,7 @@
 			<hr class="footer-hr" />
 
 			<div class="copyright">
-				© Copyright 2022. Made by <a href="/"><strong>Mike Devy</strong></a>
+				© Copyright 2022. Made by <a href="/"><strong>Ulugbek Yolchimurodov</strong></a>
 			</div>
 		</footer>
 
