--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						<div class="skills__skill">MongoDB</div>
 						<div class="skills__skill">Mongoose</div>
 						<div class="skills__skill">Socket.IO</div>
-						<div class="skills__skill">Jest</div>
+						<div class="skills__skill">Mocha / Chai</div>
 						<div class="skills__skill">Git/GitHub</div>
 						<div class="skills__skill">REST</div>
 						<div class="skills__skill">GraphQL</div>
