task/added formsubmit form action

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			</div>
 
 			<div class="contact__form-container">
-				<form action="#" class="contact__form" method="post">
+				<form action="https://formsubmit.co/ulubekdev@gmail.com" class="contact__form" method="post">
 					<input type="hidden" name="form-name" value="form 1" />
 					<div class="contact__form-field">
 						<label class="contact__form-label" for="name">Name</label>
