added some skills

--- a/index.html
+++ b/index.html
@@ -71,23 +71,20 @@
 					</p>
 				</div>
 			</div>
-
 			<div class="about_content">
 				<div class="about_content-main">
 					<h3 class="about__title">Get to know me!</h3>
 					<div class="about_text">
 						<p class="about_text-p">
-							Hello! My real name is Ulugbek, but you can call me
-							<strong>Mike</strong>. I'm a
-							<strong>Backend Node.js developer :</strong>
+							Hello! My name is Ulugbek, but you can call me <strong>anytime 😎</strong> I'm a <strong>Backend Node.js developer :</strong>
 						</p>
 						<ul class="about_text-p">
-							<li>1 year JavaScript experience and in-depth knowledge of Node.js.</li>
-							<li>Experience in creating RESTful and GraphQL API with express server-Hands-on experience with Typescript.</li>
+							<li>1 year of JavaScript experience and in-depth knowledge of Node.js.</li>
+							<li>I have experience in understanding the principles and patterns of software design and its applications.</li>
 							<li>Ability to create a complex logical flow according to business requirements.</li>
 							<li>MongoDB's and PostgreSQL's experience in understanding software design principles and models, and experience in their application.</li>
 							<li>High productivity and efficient time management - Experience in SDLC Scrum/Agile.</li>
-							<li>Excellent interpersonal & written communication skills.</li>
+							<li>Excellent interpersonal and written communication skills.</li>
 							<li>Good spoken English</li>
 						</ul>
 						<p class="about_text-p">
@@ -108,16 +105,21 @@
 						<div class="skills__skill">Node.js</div>
 						<div class="skills__skill">ExpressJS</div>
 						<div class="skills__skill">NestJS (learning)</div>
+						<div class="skills__skill">REST</div>
+						<div class="skills__skill">GraphQL</div>
 						<div class="skills__skill">Redis</div>
 						<div class="skills__skill">PostgreSQL</div>
 						<div class="skills__skill">Sequelize</div>
 						<div class="skills__skill">MongoDB</div>
 						<div class="skills__skill">Mongoose</div>
 						<div class="skills__skill">Socket.IO</div>
+						<div class="skills__skill">Swagger</div>
 						<div class="skills__skill">Mocha / Chai</div>
+						<div class="skills__skill">AWS S3</div>
+						<div class="skills__skill">Amazon Lighstail</div>
+						<div class="skills__skill">Docker</div>
 						<div class="skills__skill">Git/GitHub</div>
-						<div class="skills__skill">REST</div>
-						<div class="skills__skill">GraphQL</div>
+						<div class="skills__skill">CI/CD</div>
 						<div class="skills__skill">...</div>
 					</div>
 				</div>
@@ -141,7 +143,7 @@
 			</div>
 
 			<div class="contact__form-container">
-				<form action="https://formsubmit.co/ulubekdev@gmail.com" class="contact__form" method="post">
+				<form action="https://formsubmit.co/ulubekdev@gmail.com" class="contact__form" method="POST">
 					<input type="hidden" name="form-name" value="form 1" />
 					<div class="contact__form-field">
 						<label class="contact__form-label" for="name">Name</label>
